# RMQDelivery

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  interface.py  main.py  pyproject.toml
core/: interface.py
core/taskman/: interface.py
core/taskman/domain/: entity.py  services.py
core/utils/: singleton.py  types.py
infrastructure/: redis_lib.py
test/: conftest.py  test_redis_consumer.py  test_redis_dynamic_enqueue.py
utils/: singleton.py
