[tool.poetry]
name = "python-template"
version = "0.1.0"
description = """A redis based queueing and streaming package built on redis queue package `rq` and redis `streams` or redis `pubsub`.

Any service can use it to create a dedicated queue and dedicated consumer group for streaming so that external services can consume from dedicated channels.
"""
authors = ["Akul Mathur <akulmat@proton.me>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
redis = "^4.3.5"
py-redis = "^1.1.1"
rq = "^1.11.1"
pytest = "^7.2.0"
hiredis = "^2.0.0"


[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"