[tool.poetry]
name = "python-template"
version = "0.1.0"
description = """A redis based queueing and streaming package built on redis queue package `rq` and redis `streams` or redis `pubsub`.

Any service can use it to create a dedicated queue and dedicated consumer group for streaming so that external services can consume from dedicated channels.
"""
authors = ["Akul Mathur <akulmat@proton.me>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
redis = "^4.3.5"
py-redis = "^1.1.1"
rq = "^1.11.1"
hiredis = "^2.0.0"
uvloop = ">=0.16.0"


[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
black = {extras = ["d", "click==8.0.2"], version = "^22.10.0"}
pytest = "~7.2.0"
pre-commit = "^2.17.0"
pylint = ">=2.14.4"
isort = ">=5.10.1"
mypy = ">=0.971"
anyio = ">=3.6.1"
pytest-asyncio = ">=0.19.0"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fast: fast executing tests. use this marker if unsure."
]
# Removes warning
asyncio_mode = "auto"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
addopts = ["-ra -q", "--color=yes",]

[tool.isort]
line_length = 79
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"